# performance-monitor

./: .gitmodules  go.mod  main.go
Firmware/: .gitignore  .gitmodules  ProjectContext.md
Firmware/.cursor/rules/: CODE_RULES.mdc  embedded_rules.mdc
Firmware/.maks/: English.md
Firmware/MainApp/: CMakeLists.txt  CMakePresets.json  FlashMap.md
Firmware/MainApp/Main/inc/: at32f403a_407_conf.h  flash_map.h  main.h  preprocessing.h
Firmware/MainApp/Main/src/: at32f403a_407_int.c  main.cpp  preprocessing.cpp
Firmware/MainApp/Middlewares/FreeRTOS/Config/: CMakeLists.txt  FreeRTOSConfig._____h  FreeRTOSConfig.h
Firmware/MainApp/cmake_proj/: cmake_freertos.cmake  cmake_proj.cmake
Firmware/bootloader0/: CMakeLists.txt  CMakePresets.json
Firmware/bootloader0/Docs/: Updating.jex
Firmware/bootloader0/Main/inc/: at32f403a_407_conf.h  at32f403a_407_wk_config.h  flash_map.h  main.h  main_defines.h  wk_system.h
Firmware/bootloader0/Main/src/: at32f403a_407_int.c  at32f403a_407_wk_config.c  main.cpp  wk_system.c
Firmware/bootloader0/cmake/: gcc-arm-none-eabi_TAF.cmake
Firmware/bootloader0/cmake_proj/: cmake_proj.cmake
Firmware/prebootload/: CMakeLists.txt  CMakePresets.json
Firmware/prebootload/Docs/Updating/: Update protocol description.md
Firmware/prebootload/Main/inc/: at32f403a_407_conf.h  main.h  (+1 more)
Firmware/prebootload/cmake_proj/: cmake_proj.cmake
device/: device.go
gui/: gui.go
gui/colorschemes/: colorscheme.go  colorscheme_type.go
gui/components/: assets.go  content_window.go  nav_menu.go  status_window.go
gui/subcomponents/: icon_label.go
(+4 files in other folders)
